--- a/files/en-us/mozilla/firefox/releases/1.5/changing_the_priority_of_http_requests/index.html
+++ b/files/en-us/mozilla/firefox/releases/1.5/changing_the_priority_of_http_requests/index.html
@@ -23,14 +23,14 @@ tags:
 
 <p>To change the priority of an HTTP request, you need access to the <a href="/en-US/docs/XPCOM_Interface_Reference/nsIChannel">nsIChannel</a> that the request is being made on. If you do not have an existing channel, then you can create one as follows:</p>
 
-<pre class="brush: none">var ios = Components.classes["@<a href="https://mozilla.org/network/io-service;1">mozilla.org/network/io-service;1</a>"]
+<pre>var ios = Components.classes["@<a href="https://mozilla.org/network/io-service;1">mozilla.org/network/io-service;1</a>"]
                     .getService(Components.interfaces.nsIIOService);
 var ch = ios.newChannel("<a href="https://www.example.com/">https://www.example.com/</a>", null, null);
 </pre>
 
 <p>Once you have an <a href="/en-US/docs/XPCOM_Interface_Reference/nsIChannel">nsIChannel</a>, you can access the priority as follows:</p>
 
-<pre class="brush: none">if (ch instanceof Components.interfaces.nsISupportsPriority) {
+<pre>if (ch instanceof Components.interfaces.nsISupportsPriority) {
   ch.priority = Components.interfaces.nsISupportsPriority.PRIORITY_LOWEST;
 }
 </pre>
@@ -41,7 +41,7 @@ var ch = ios.newChannel("<a href="https://www.example.com/">https://www.example.
 
 <p>If you are programming in <a href="/en-US/docs/Web/JavaScript">JavaScript</a>, you will probably want to use <a href="/en-US/docs/Web/API/XMLHttpRequest">XMLHttpRequest</a>, a much higher level abstraction of an HTTP request. You can access the <code>channel</code> member of an <a href="/en-US/docs/Web/API/XMLHttpRequest">XMLHttpRequest</a> once you have called the <code>open</code> method on it, as follows:</p>
 
-<pre class="brush: none">var req = new XMLHttpRequest();
+<pre>var req = new XMLHttpRequest();
 req.open("GET", "<a href="https://www.example.com">https://www.example.com</a>", false);
 if (req.channel instanceof Components.interfaces.nsISupportsPriority) {
   req.channel.priority = Components.interfaces.nsISupportsPriority.PRIORITY_LOWEST;
@@ -57,7 +57,7 @@ req.send(null);
 
 <p><a href="/en-US/docs/nsISupportsPriority#adjustPriority">nsISupportsPriority</a> includes a convenience method named <code>adjustPriority</code>. You should use this if you want to alter the priority of a request by a certain amount. For example, if you would like to make a request have slightly higher priority than it currently has, you could do the following:</p>
 
-<pre class="brush: none">// assuming we already have a nsIChannel from above
+<pre>// assuming we already have a nsIChannel from above
 if (ch instanceof Components.interfaces.nsISupportsPriority) {
   ch.adjustPriority(-1);
 }
