--- a/files/en-us/mozilla/firefox/releases/4/the_add-on_bar/index.html
+++ b/files/en-us/mozilla/firefox/releases/4/the_add-on_bar/index.html
@@ -63,7 +63,7 @@ if (firstrun) {
 <h2 id="How_to_use_one_overlay_per_Firefox_version">How to use one overlay per Firefox version</h2>
 <p>Adding support for the add-on bar while staying compatible with Firefox 3.6 and older will require using two overlays. The <a href="/en-US/docs/Chrome_Registration">chrome.manifest</a> file can specify which file is used by which Firefox version by using <a href="/en-US/docs/Chrome_Registration#Manifest_flags">manifest flags</a>:</p>
 
-<pre class="brush: none">overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlayold.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&lt;4.0
+<pre>overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlayold.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&lt;4.0
 overlay chrome://browser/content/browser.xul chrome://myaddon/content/myaddon/overlay.xul application={ec8030f7-c20a-464f-9b0e-13a3a9e97384} appversion&gt;=4.0
 </pre>
 
