--- a/files/en-us/mozilla/firefox/releases/75/index.html
+++ b/files/en-us/mozilla/firefox/releases/75/index.html
@@ -48,8 +48,8 @@ tags:
  <li>Multiple IDs on <code>aria-details</code> ({{bug(1608883)}}).</li>
 </ul>
 
-<div class="notecard note">
-<p><strong>Note</strong>: On macOS, we are first waiting for Apple to define what Safari will expose as Apple-dialect attributes to VoiceOver, and will then follow suit.</p>
+<div class="note">
+  <p><strong>Note:</strong> On macOS, we are first waiting for Apple to define what Safari will expose as Apple-dialect attributes to VoiceOver, and will then follow suit.</p>
 </div>
 
 <h3 id="JavaScript">JavaScript</h3>
