--- a/files/en-us/mozilla/firefox/experimental_features/index.html
+++ b/files/en-us/mozilla/firefox/experimental_features/index.html
@@ -841,7 +841,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <td colspan="2"><code><strong>dom.events.asyncClipboard.clipboardItem</strong></code></th>
+   <td colspan="2"><code>dom.events.asyncClipboard.clipboardItem</code></th>
   </tr>
  </tbody>
 </table>
@@ -921,7 +921,7 @@ tags:
   </tr>
   <tr>
    <th>Preference name</th>
-   <td colspan="2"><code><strong>dom.security.sanitizer.enabled</strong></code></th>
+   <td colspan="2"><code>dom.security.sanitizer.enabled</code></th>
   </tr>
  </tbody>
 </table>
