--- a/files/en-us/mozilla/firefox/releases/22/index.html
+++ b/files/en-us/mozilla/firefox/releases/22/index.html
@@ -33,7 +33,7 @@ tags:
  <li>Support for <a href="/en-US/docs/Web/API/Notifications_API/Using_the_Notifications_API">Web Notifications</a> has been landed ({{bug(782211)}}).</li>
  <li>The {{domxref("FormData")}} <code>append</code> method now accepts a third optional <code>filename</code> parameter ({{bug(690659)}}).</li>
  <li>{{domxref("Node.isSupported")}} has been removed ({{bug(801562)}}).</li>
- <li><strong><code>Node.setUserData</code></strong> and <strong><code>Node.getUserData</code></strong> has been removed for web content and are deprecated for chrome content ({{bug(842372)}}).</li>
+ <li><code>Node.setUserData</code> and <code>Node.getUserData</code> has been removed for web content and are deprecated for chrome content ({{bug(842372)}}).</li>
  <li>The {{domxref("Element.attributes")}} property has been moved there from {{domxref("Node")}} as required by the spec ({{bug("844134")}}).</li>
  <li>The Mac OS X backend for <strong>Ambient Light Events</strong> has been implemented.</li>
  <li>Elements in the HTML namespace with local names {{HTMLElement("bgsound")}}, {{HTMLElement("multicol")}}, and {{HTMLElement("image")}} no longer implement the {{domxref("HTMLSpanElement")}} interface. {{HTMLElement("bgsound")}} and {{HTMLElement("bgsound")}} implement {{domxref("HTMLUnknownElement")}} and {{HTMLElement("image")}} implements {{domxref("HTMLElement")}}.</li>
