--- a/files/en-us/mozilla/firefox/releases/50/index.html
+++ b/files/en-us/mozilla/firefox/releases/50/index.html
@@ -55,7 +55,7 @@ tags:
 <ul>
  <li>The experimental (and deprecated) <a href="https://en.wikipedia.org/wiki/SPDY">SPDY</a> 3.1 is now disabled by default {{bug(1287132)}}.</li>
  <li>Support for {{HTTPHeader("X-Content-Type-Options")}} has been added ({{bug(471020)}}).</li>
- <li>The cookie prefixes <strong><code>__Host-</code></strong> and <strong><code>__Secure-</code></strong> have been implemented. See {{HTTPHeader("Set-Cookie")}} and {{bug(1283368)}}.</li>
+ <li>The cookie prefixes <code>__Host-</code> and <code>__Secure-</code> have been implemented. See {{HTTPHeader("Set-Cookie")}} and {{bug(1283368)}}.</li>
  <li>The {{HTTPHeader("Referrer-Policy")}} header has been implemented {{bug(1264164)}}.</li>
 </ul>
 
