--- a/files/en-us/mozilla/firefox/releases/61/index.html
+++ b/files/en-us/mozilla/firefox/releases/61/index.html
@@ -126,7 +126,7 @@ tags:
 <h3 id="HTTP">HTTP</h3>
 
 <ul>
- <li>The cookie directive <code><strong>SameSite</strong></code> has been implemented. See <a href="/en-US/docs/Web/HTTP/Headers/Set-Cookie">Set-Cookie</a> and <a href="/en-US/docs/Web/HTTP/Cookies">HTTP cookies</a> ({{bug(795346)}}).</li>
+ <li>The cookie directive <code>SameSite</code> has been implemented. See <a href="/en-US/docs/Web/HTTP/Headers/Set-Cookie">Set-Cookie</a> and <a href="/en-US/docs/Web/HTTP/Cookies">HTTP cookies</a> ({{bug(795346)}}).</li>
 </ul>
 
 <h3 id="Networking">Networking</h3>
@@ -165,7 +165,7 @@ tags:
 
 <ul>
  <li>The {{domxref("File")}} interface's property {{domxref("File.lastModifiedDate", "lastModifiedDate")}} has been removed ({{bug(1458883)}}).</li>
- <li>The <strong><code>Node.setUserData</code></strong> and <strong><code>Node.getUserData</code></strong> methods have been removed from the platform completely ({{bug(749981)}}).</li>
+ <li>The <code>Node.setUserData</code> and <code>Node.getUserData</code> methods have been removed from the platform completely ({{bug(749981)}}).</li>
  <li>The {{domxref("Element.createShadowRoot()")}} method has been removed. Use {{domxref("Element.attachShadow()")}} instead ({{bug(1453789)}}).</li>
  <li>The {{domxref("MediaStream")}} overload of the {{domxref("URL.createObjectURL()")}} method has been removed ({{bug(1454889)}}).</li>
 </ul>
