--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -189,11 +189,13 @@ chrome.cookies.set(
 
 <h3 id="Unsupported_APIs">Unsupported APIs</h3>
 
-<h4>declarativeContent API</h4>
+<h4>DeclarativeContent API</h4>
 
-<p>Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a> in Firefox:</p>
-
-<p>In addition, Firefox <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1323433#c16">will not be supporting</a> the <code>declarativeContent.RequestContentScript</code> API (which is rarely used, and is unavailable in stable releases of Chrome).</p>
+<ul>
+  <li>
+    <p><strong>In Firefox:</strong> Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a>. In addition, Firefox <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1323433#c16">will not be supporting</a> the <code>declarativeContent.RequestContentScript</code> API (which is rarely used, and is unavailable in stable releases of Chrome).</p>
+  </li>
+</ul>
 
 <h3 id="Miscellaneous_incompatibilities">Miscellaneous incompatibilities</h3>
 
