Make some tables convertible

--- a/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
@@ -26,7 +26,7 @@ browser-compat: webextensions.match_patterns.scheme
 
 <p>The <em>scheme</em> component may take one of two forms:</p>
 
-<table class="fullwidth-table standard-table">
+<table class="standard-table">
  <thead>
   <tr>
    <th scope="col">Form</th>
@@ -49,7 +49,7 @@ browser-compat: webextensions.match_patterns.scheme
 
 <p>The <em>host</em> component may take one of three forms:</p>
 
-<table class="fullwidth-table standard-table">
+<table class="standard-table">
  <thead>
   <tr>
    <th scope="col">Form</th>
@@ -378,7 +378,7 @@ browser-compat: webextensions.match_patterns.scheme
 
 <h3 id="Invalid_match_patterns">Invalid match patterns</h3>
 
-<table class="fullwidth-table standard-table">
+<table class="standard-table">
  <thead>
   <tr>
    <th scope="col">Invalid pattern</th>
