--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -45,6 +45,7 @@ tags:
 <h4 id="DOM">DOM</h4>
 
 <ul>
+  <li>Developers can now provide a hint for the enter key label/icon used on virtual keyboards, using either <a href="/en-US/docs/Web/API/HTMLElement/enterkeyhint"><code>HTMLElement.enterkeyhint</code></a> or the global attribute <a href="/en-US/docs/Web/HTML/Global_attributes/enterkeyhint"><code>enterkeyhint</code></a> ({{bug(1648332)}}).</li>
   <li>The {{domxref("HTMLScriptElement.supports()")}} static method is now supported. This provides a simple and unified method for feature checking whether a browser supports particular types of scripts, such as JavaScript modules or classic scripts ({{bug(1729239)}}).</li>
 </ul>
 
