Update webdriver updates
Fix typo

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -61,7 +61,7 @@ tags:
 
 <ul>
   <li>WebDriver:GetWindowHandle and WebDriver:GetWindowHandles now returns content or chrome window handles based on the selected scope ({{bug(1729291)}})</li>
-  <li>The succesive dialog limit is disabled if alerts are fired to quickly ({{bug(1731795)}}) </li>
+  <li>The successive dialog limit is disabled if alerts are fired to quickly ({{bug(1731795)}}) </li>
 </ul>
 
 <h4 id="removals_webdriver">Removals</h4>
