Update webdriver changes
Reword entry

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -60,8 +60,7 @@ tags:
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
 <ul>
-  <li>WebDriver:GetWindowHandle and WebDriver:GetWindowHandles now returns content or chrome window handles based on the selected scope ({{bug(1729291)}})</li>
-  <li>The successive dialog limit is disabled if alerts are fired to quickly ({{bug(1731795)}}) </li>
+  <li><code>WebDriver:GetWindowHandle</code> and <code>WebDriver:GetWindowHandles</code> now return handles for browser windows instead of tabs when chrome scope is enabled ({{bug(1729291)}})</li>
 </ul>
 
 <h4 id="removals_webdriver">Removals</h4>
