--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -60,7 +60,7 @@ tags:
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
 <ul>
-  <li><code>WebDriver:GetWindowHandle</code> and <code>WebDriver:GetWindowHandles</code> now return handles for browser windows instead of tabs when chrome scope is enabled ({{bug(1729291)}})</li>
+  <li><code>WebDriver:GetWindowHandle</code> and <code>WebDriver:GetWindowHandles</code> now return handles for browser windows instead of tabs, when chrome scope is enabled ({{bug(1729291)}})</li>
 </ul>
 
 <h4 id="removals_webdriver">Removals</h4>
