Webdriver (Marionette) Updates (#9989)

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -60,6 +60,10 @@ tags:
 
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
 
+<ul>
+  <li><code>WebDriver:GetWindowHandle</code> and <code>WebDriver:GetWindowHandles</code> now return handles for browser windows instead of tabs, when chrome scope is enabled ({{bug(1729291)}})</li>
+</ul>
+
 <h4 id="removals_webdriver">Removals</h4>
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
