Remove RTCOfferAnswerOptions and RTC[Offer/Answer]Options from MDN (#9748)
* Remove RTCOfferAnswerOptions and RTC[Offer/Answer]Options from MDN

* Remove reference to voiceActivityDetection

* Update files/en-us/web/api/rtcpeerconnection/createanswer/index.md

Co-authored-by: wbamberg <will@bootbonnet.ca>

* Remove RTCRTPSynchronizationSource dictionary from MDN

* Remove references to RTCRtpSynchronizationSource

* Fix capitalization

* Fix redirects

* Fix redirects (again)

* Fix redirects (finally)

Co-authored-by: wbamberg <will@bootbonnet.ca>

--- a/files/en-us/mozilla/firefox/releases/33/index.html
+++ b/files/en-us/mozilla/firefox/releases/33/index.html
@@ -99,7 +99,7 @@ tags:
 <h3 id="AudioVideoWebRTC">Audio/Video/WebRTC</h3>
 
 <ul>
- <li>The {{domxref("RTCOfferOptions")}} dictionary, used to provide options when calling {{domxref("RTCPeerConnection.createOffer()")}}, has been implemented.</li>
+ <li>The <code>RTCOfferOptions</code> dictionary, used to provide options when calling {{domxref("RTCPeerConnection.createOffer()")}}, has been implemented.</li>
 </ul>
 
 <h3 id="WebGL">WebGL</h3>
