--- a/files/en-us/mozilla/firefox/releases/43/index.html
+++ b/files/en-us/mozilla/firefox/releases/43/index.html
@@ -85,7 +85,7 @@ tags:
 
 <ul>
  <li>The {{domxref("HTMLCanvasElement.captureStream()")}} method has been activated by default ({{bug(1177276)}}).</li>
- <li>The non-standard constraint style option list for {{domxref("RTCOfferOptions")}} has been deprecated and will be removed entirely in Firefox 44.</li>
+ <li>The non-standard constraint style option list for <code>RTCOfferOptions</code> has been deprecated and will be removed entirely in Firefox 44.</li>
 </ul>
 
 <h4 id="Miscellaneous">Miscellaneous</h4>
