--- a/files/en-us/mozilla/firefox/releases/48/index.html
+++ b/files/en-us/mozilla/firefox/releases/48/index.html
@@ -130,7 +130,7 @@ tags:
 
 <ul>
 	<li>The two methods {{domxref("MediaStream.clone()")}} and {{domxref("MediaStreamTrack.clone()")}} have been implemented ({{bug(1208371)}}).</li>
-	<li>The <code>iceRestart</code> entry is now supported in the {{domxref("RTCOfferOptions")}} dictionary, allowing {{domxref("RTCPeerConnection.createOffer", "createOffer()")}} to be used to request ICE restarts ({{bug(906986)}}).</li>
+	<li>The <code>iceRestart</code> entry is now supported in the <code>RTCOfferOptions</code>code> dictionary, allowing {{domxref("RTCPeerConnection.createOffer", "createOffer()")}} to be used to request ICE restarts ({{bug(906986)}}).</li>
 	<li>The {{domxref("RTCPeerConnection.createOffer()")}} method now prefers the VP9 video codec by default; previously VP8 was preferred ({{bug(1242324)}}.</li>
 	<li>WebM/VP8 video that includes video resolution changes that has been recorded using {{domxref("MediaRecorder")}} can now be played back successfully.</li>
 </ul>
