--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -171,7 +171,7 @@ document.querySelector("#paste").addEventListener("click", paste);</pre>
 
 <p>Firefox supports the <code>"clipboardRead"</code> <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions">permission</a> from version 54 but only supports pasting into elements in <a href="/en-US/docs/Web/Guide/HTML/Editable_content">content editable mode</a>, which for content scripts only works with a {{HTMLElement("textarea")}}. For background scripts, any element can be set to content editable mode.</p>
 
-<h2 id="browser_compatibility">Browser compatibility</h2>
+<h2 id="Browser_compatibility">Browser compatibility</h2>
 
 <h3 id="navigator_clipboard">navigator.clipboard</h3>
 
