--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -42,7 +42,7 @@ tags:
 
 <h3 id="Using_the_Clipboard_API">Using the Clipboard API</h3>
 
-<p>The Clipboard API writes arbitrary data to the clipboard from your extension. Using the API requires the permission <code>"clipboardRead"</code> or <code>"clipboardWrite"</code> in your <code>manifest.json</code> file. As the API is only available to <a href="/en-US/docs/Web/Security/Secure_Contexts">Secure Contexts</a>, it cannot be used from a content script running on http:-pages, only https:.</p>
+<p>The Clipboard API writes arbitrary data to the clipboard from your extension. Using the API requires the permission <code>"clipboardRead"</code> or <code>"clipboardWrite"</code> in your <code>manifest.json</code> file. As the API is only available to <a href="/en-US/docs/Web/Security/Secure_Contexts">Secure Contexts</a>, it cannot be used from a content script running on <code>http:</code>-pages, only <code>https:</code>-pages.</p>
 
 <p>For page scripts, the <code>"clipboard-write"</code> permission needs to be requested using the Web API {{domxref("Permissions", "navigator.permissions")}}. You can check for that permission using {{domxref("Permissions.query", "navigator.permissions.query()")}}:</p>
 
@@ -131,7 +131,7 @@ browser.alarms.onAlarm.addListener(copy);</pre>
  <li>{{domxref("Clipboard.write", "navigator.clipboard.write()")}} is not supported.</li>
 </ul>
 
-<p>See the <a href="#browser_compatibility">browser compatibility tables</a> for more information.</p>
+<p>See the <a href="#Browser_compatibility">browser compatibility tables</a> for more information.</p>
 
 <h2 id="Reading_from_the_clipboard">Reading from the clipboard</h2>
 
