--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/homepage_url/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/homepage_url/index.html
@@ -31,7 +31,8 @@ browser-compat: webextensions.manifest.homepage_url
 
 <p>URL for the extension's home page.</p>
 
-<p>If the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer">developer</a> key is supplied and it contains the "url" property, this will override the homepage_url key.</p>
+<p>If a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/developer">developer</a> key containing the "url" property and "homepage_url" are defined, Firefox uses "developer.url" while Opera uses "homepage_url". 
+Chrome and Safari do not support the "developer" key.</p>
 
 <p>This is a <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Internationalization#internationalizing_manifest.json">localizable property</a>.</p>
 
