Fix menu path for Remote Debugging

--- a/files/en-us/tools/about_colon_debugging/index.html
+++ b/files/en-us/tools/about_colon_debugging/index.html
@@ -16,7 +16,7 @@ tags:
 
 <ul>
  <li>Type <code>about:debugging</code> in the Firefox URL bar.</li>
- <li>In the <strong>Tools</strong> &gt; <strong>Web Developer</strong> menu, click <strong>Remote Debugging</strong>.</li>
+ <li>In the <strong>Tools</strong> &gt; <strong>Browser Tools</strong> menu, click <strong>Remote Debugging</strong>.</li>
 </ul>
 
 <p>When about:debugging opens, on the left-hand side, you'll see a sidebar with two options and information about your remote debugging setup:</p>
